tests/negative/test_var_unknown.orb
fnc main() () {
    let (x:i32 (+ 5 y));
};